feat: Update brand name and integrate search functionality
Rebrands the application to `shecare.co` consistently across metadata, package.json, and content. Introduces a `SearchProvider` to manage search state and enables basic search integration in the header. Removes the unused `RecipeGenerator` component and refactors `App.tsx` to accommodate the new `SearchProvider` and layout adjustments. Also includes type declarations for `model-viewer` custom elements in `types.ts`.

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF--8" />
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💖</text></svg>">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SHE CARE – Premium Women’s Wellness</title>
+    <title>shecare.co – Premium Women’s Wellness</title>
     <meta name="description" content="Luxury wellness and skincare for modern women." />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://she.care/" />
-    <meta property="og:title" content="SHE CARE – Premium Women’s Wellness" />
+    <meta property="og:title" content="shecare.co – Premium Women’s Wellness" />
     <meta property="og:description" content="Luxury wellness and skincare for modern women." />
     <meta property="og:image" content="https://images.pexels.com/photos/7262911/pexels-photo-7262911.jpeg?auto=compress&cs=tinysrgb&w=1200" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://she.care/" />
-    <meta property="twitter:title" content="SHE CARE – Premium Women’s Wellness" />
+    <meta property="twitter:title" content="shecare.co – Premium Women’s Wellness" />
     <meta property="twitter:description" content="Luxury wellness and skincare for modern women." />
     <meta property="twitter:image" content="https://images.pexels.com/photos/7262911/pexels-photo-7262911.jpeg?auto=compress&cs=tinysrgb&w=1200" />
 
