feat: Implement authentication and update site metadata
Introduces user authentication flow via AuthProvider and AuthModal.
Updates project and metadata to reflect the new domain 'shecarehub.com'.
Refactors `types.ts` to remove redundant `SocialLink` and `FooterLink` interfaces.
Resolves JSX type resolution issues for custom elements by correctly importing React.
Adds a basic README for local development setup.

--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF--8" />
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💖</text></svg>">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>shecare.co – Premium Women’s Wellness</title>
+    <title>shecarehub.com – Premium Women’s Wellness</title>
     <meta name="description" content="Luxury wellness and skincare for modern women." />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://she.care/" />
-    <meta property="og:title" content="shecare.co – Premium Women’s Wellness" />
+    <meta property="og:url" content="https://shecarehub.com/" />
+    <meta property="og:title" content="shecarehub.com – Premium Women’s Wellness" />
     <meta property="og:description" content="Luxury wellness and skincare for modern women." />
-    <meta property="og:image" content="https://images.pexels.com/photos/7262911/pexels-photo-7262911.jpeg?auto=compress&cs=tinysrgb&w=1200" />
+    <meta property="og:image" content="https://m.media-amazon.com/images/I/71YqDc-POJL.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://she.care/" />
-    <meta property="twitter:title" content="shecare.co – Premium Women’s Wellness" />
+    <meta property="twitter:url" content="https://shecarehub.com/" />
+    <meta property="twitter:title" content="shecarehub.com – Premium Women’s Wellness" />
     <meta property="twitter:description" content="Luxury wellness and skincare for modern women." />
-    <meta property="twitter:image" content="https://images.pexels.com/photos/7262911/pexels-photo-7262911.jpeg?auto=compress&cs=tinysrgb&w=1200" />
+    <meta property="twitter:image" content="https://m.media-amazon.com/images/I/71YqDc-POJL.jpg" />
 
     <!-- 
       NOTE: The Tailwind CSS CDN is used here for rapid prototyping in this development environment.
@@ -58,6 +58,9 @@
     </script>
     
     <style>
+      html {
+        scroll-behavior: smooth;
+      }
       /* Hide scrollbar for Chrome, Safari and Opera */
       .no-scrollbar::-webkit-scrollbar {
           display: none;
